--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -29,9 +29,6 @@
 									Grâce à mon expertise en développement Web et à ma connaissance approfondie des nouvelles technologies, je peux vous guider dans votre transformation digitale pour atteindre vos objectifs en ligne. Ensemble, nous pouvons créer un site Web professionnel et attractif qui représente votre entreprise de manière efficace sur Internet. De la conception à la mise en ligne, je m'occupe de toutes les étapes du processus de développement Web. Votre site sera adapté à tous les appareils, optimisé pour les moteurs de recherche et doté des fonctionnalités nécessaires pour attirer et engager vos visiteurs.
 								</p>
 								<p>
-									Je vous propose également des stratégies de marketing numérique pour augmenter votre visibilité en ligne et attirer un public ciblé. De la création de campagnes publicitaires sur les réseaux sociaux à l'optimisation de votre référencement naturel, je mets en place des stratégies personnalisées pour vous aider à atteindre vos objectifs de croissance et de conversion.
-								</p>
-								<p>
 									La sécurité en ligne est une préoccupation majeure pour toute entreprise. Je vous aide à renforcer la sécurité de vos données et de votre site Web en mettant en place des mesures de protection avancées. De la sécurisation des transactions en ligne à la protection contre les cyberattaques, je veille à ce que votre présence en ligne soit sûre et fiable.
 								</p>
 								<p>
@@ -43,9 +40,8 @@
 							</section>
 
 							<div class="hp-buttons">
-								<a href="{{ asset('belbeche_walid_cv.pdf')}}" target="_blank" class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill">Télécharger CV</a>
-								<a href="mailto:wbelbeche.s@gmail.com" target="_blank" class="d-inline-flex align-items-center btn btn-success btn-lg px-4 rounded-pill">Contacter</a>
-
+								<a href="{{ asset('belbeche_walid_cv.pdf')}}" target="_blank" class="btn btn-primary btn-lg px-4 rounded-pill">Télécharger CV</a>
+								<a href="mailto:wbelbeche.s@gmail.com" target="_blank" class="btn btn-success btn-lg px-4 rounded-pill">Contacter</a>
 							</div>
 						</div>
 					</div>
