--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -62,19 +62,19 @@
 						</div>
 						<div class="card-body">
 							<h3 class="card-title mt-3">Préparation / communication</h3>
-							<p class="card-text">En comprenant le besoin unique de votre entreprise et de votre marché local, je m'efforce de fournir une solution de développement web et mobile personnalisée qui vous aidera à atteindre vos objectifs spécifiques. Mon service de développement local se concentre sur la création d'une solution sur mesure qui répond à la fois aux exigences de votre entreprise et aux attentes de vos clients.</p>
+							<p class="card-text">En comprenant le besoin unique de votre entreprise et de votre marché local, je m'efforce de fournir une solution de développement web et mobile personnalisée qui vous aidera à atteindre vos objectifs spécifiques.</p>
 							<ul class="list-group d-flex justify-content-center mb-4">
 								<li class="list-group-item d-flex pl-0 pb-1">
 									<span class="mr-2"><i class="fas fa-check-circle text-success"></i></span>
-									<div>Conception tout écrans</div>
+									<div>Définition des besoins et objectifs</div>
 								</li>
 								<li class="list-group-item d-flex pl-0 pb-1">
 									<span class="mr-2"><i class="fas fa-check-circle text-success"></i></span>
-									<div>Optimisation SEO</div>
+									<div>Évaluation technique</div>
 								</li>
 								<li class="list-group-item d-flex pl-0 pb-1">
 									<span class="mr-2"><i class="fas fa-check-circle text-success"></i></span>
-									<div>Gestion de la performance du site</div>
+									<div>Suivi et reporting de la demande</div>
 								</li>
 							</ul>
 						</div>
@@ -91,15 +91,15 @@
 							<ul class="list-group d-flex justify-content-center mb-4">
 								<li class="list-group-item d-flex pl-0 pb-1">
 									<span class="mr-2"><i class="fas fa-check-circle text-success"></i></span>
-									<div>Définition des besoins et objectifs</div>
+									<div>Conception tout écrans</div>
 								</li>
 								<li class="list-group-item d-flex pl-0 pb-1">
 									<span class="mr-2"><i class="fas fa-check-circle text-success"></i></span>
-									<div>Évaluation technique</div>
+									<div>Optimisation SEO</div>
 								</li>
 								<li class="list-group-item d-flex pl-0 pb-1">
 									<span class="mr-2"><i class="fas fa-check-circle text-success"></i></span>
-									<div>Suivi et reporting de la demande</div>
+									<div>Gestion de la performance du site</div>
 								</li>
 							</ul>
 						</div>
@@ -198,8 +198,8 @@
 					<div class="ci-text">
 						<h4>INTÉGRATION & DÉVELOPPEMENT</h4>
 						<p>Là on va commencer à entrer dans le vif du sujet : la transformation des visuels en code
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																			                            HTML, CSS et PHP ! C’est à ce moment que j'aborde le coté techniques et je vous
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																			                            créererai le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
+							HTML, CSS et PHP ! C’est à ce moment que j'aborde le coté techniques et je vous
+							créererai le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
 					</div>
 				</div>
 
@@ -222,53 +222,70 @@
 					<div class="ci-text">
 						<h4>RÉFÉRENCEMENT NATUREL</h4>
 						<p>Cerise sur le gâteau ? Non pas tant que ça en fait. Un beau site tout neuf, ce serait dommage
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																			                            qu’il ne soit pas référencé sur Google , vous ne trouvez pas ? Une stratégie SEO (aussi
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																			                            appelé référencement naturel), simple et efficace ne mange pas de pain !</p>
+							qu’il ne soit pas référencé sur Google , vous ne trouvez pas ? Une stratégie SEO (aussi
+							appelé référencement naturel), simple et efficace ne mange pas de pain !</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<!-- Clients Slider -->
-	<div class="block-title">
-		<h2>
-			Technologies et outils
-		</h2>
-	</div>
-
-	<div id="clients_1" class="clients owl-carousel" data-mobile-items="1" data-tablet-items="3" data-items="6">
-		<div class="client-block">
-			<img src="./img/clients/spec-1.png" alt="PHP">
-		</div>
-
-		<div class="client-block">
-			<img src="./img/clients/spec-2.png" alt="HTML 5 / CSS 3">
-		</div>
-
-		<div class="client-block">
-			<img src="./img/clients/spec-3.png" alt="Git">
-		</div>
-
-		<div class="client-block">
-			<img src="./img/clients/spec-4.png" alt="Symfony">
-		</div>
-
-		<div class="client-block">
-			<img src="./img/clients/spec-5.png" alt="React">
-		</div>
-
-		<div class="client-block">
-			<img src="./img/clients/spec-6.png" alt="Javascript">
-		</div>
-
-		<div class="client-block">
-			<img src="./img/clients/spec-7.png" alt="Sass">
+	<!-- Technologie et outils -->
+	<div class="row">
+		<div class="col-xs-12 col-sm-12">
+			<div class="block-title">
+				<h2>Outils et technologies</h2>
+			</div>
 		</div>
 	</div>
-	<!-- /Clients Slider -->
+	<div class="row">
+		<div class="col-xs-12 col-sm-3">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-1.png" alt="PHP">
+				<h4>PHP 5/6/7/8.2</h4>
+			</div>
+		</div>
 
-	<div class="p-40"></div>
+		<div class=" col-xs-12 col-sm-3">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-2.png" alt="HTML 5 / CSS 3">
+				<h4>HTML 5 / CSS 3</h4>
+			</div>
+		</div>
+
+		<div class=" col-xs-12 col-sm-3 ">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-3.png" alt="Git">
+				<h4>Git + SSH</h4>
+			</div>
+		</div>
+
+		<div class=" col-xs-12 col-sm-3 ">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-4.png" alt="Symfony">
+				<h4>Symfony 4/5/6</h4>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-5.png" alt="React">
+				<h4>React / VueJs</h4>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-7.png" alt="Sass">
+				<h4>SaaS</h4>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-8.svg" alt="Json web token(JWT)" class="text-center">
+				<h4>Json web token</h4>
+			</div>
+		</div>
+	</div>
+	<!-- ./ Outils et technologies -->
 
 	<!-- FAQ -->
 
