--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -268,7 +268,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-3">
 			<div class="lm-info-block gray-default">
-				<img src="./img/clients/spec-5.png" alt="React">
+				<img src="./img/clients/spec-5.svg" alt="React">
 				<h4>React / VueJs</h4>
 			</div>
 		</div>
