--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<meta name="description" content="Walid BELBECHE - Création de site internet pas cher"/>
+		<meta name="description" content="Walid BELBECHE - Création de site internet et applications de qualités"/>
 		<meta name="keywords" content="Site web, Identité numérique, conseils site internet"/>
 		<meta content="Walid BELBECHE" name="author"/>
 		<title>
