--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -342,7 +342,8 @@
 						</div>
 
 						<div class="fw-button-row">
-							<a href="{{ url('front_devis_new') }}" target="_self" class="btn btn-secondary">Je fais ma demande</a>
+							<a href="{{ url('front_devis_new', {'type': 'site_vitrine'}) }}" target="_self" class="btn btn-primary">Développement pour présentation d'entreprise</a>
+
 						</div>
 
 						<div class="fw-default-row">Vous êtes une marque souhaitant donner un coup de neuf à son site
@@ -363,7 +364,8 @@
 						</div>
 
 						<div class="fw-button-row">
-							<a href="{{ url('front_devis_new') }}" target="_self" class="btn btn-primary">Je fais ma demande</a>
+							<a href="{{ url('front_devis_new', {'type': 'cross_plateforme'}) }}" target="_self" class="btn btn-primary">Développement sur mesure</a>
+
 						</div>
 
 						<div class="fw-default-row">Vous souhaitez aller un peu plus loin et vous avez en tête des
