--- a/templates/front/ticket/create_message.html.twig
+++ b/templates/front/ticket/create_message.html.twig
@@ -31,6 +31,11 @@
 			{{ form_widget(form.devis) }}
 		</div>
 
+		<div>
+			{{ form_label(form.attachment) }}
+			{{ form_widget(form.attachment) }}
+		</div>
+
 		<button type="submit">Envoyer le message</button>
 		{{ form_end(form) }}
 	{% else %}
