fixed Ticket controller for respond ticket and show message from user in front

--- a/templates/front/ticket/create_message.html.twig
+++ b/templates/front/ticket/create_message.html.twig
@@ -22,8 +22,8 @@
 			{{ form_widget(form.status) }}
 		</div>
 		<div>
-			{{ form_label(form.receiverEmail)}}
-			{{ form_widget(form.receiverEmail)}}
+			{{ form_label(form.receiver)}}
+			{{ form_widget(form.receiver)}}
 		</div>
 
 		<div>
