--- a/templates/back/ticket/show.html.twig
+++ b/templates/back/ticket/show.html.twig
@@ -13,7 +13,6 @@
     {% else %}
         <ul>
             {% for ticket in tickets %}
-                {{ dump(ticket) }}
                 <div class="container">
                     <div class="position-relative p-5 text-center text-muted bg-body border border-dashed rounded-5">
                         <a href="{{ url('back_respond_to_ticket', {'id': ticket.id}) }}" class="btn btn-success">Répondre</a>
@@ -29,8 +28,10 @@
                             <svg class="bi mt-5 mb-3" width="48" height="48"><use xlink:href="#check2-circle"/></svg>
                             {% if ticket.status == 'en_cours' %}
                                 <h1 class="text-body-emphasis">Réponse du support </h1>
-                            {% else %}
+                            {% elseif ticket.status == 'en_attente' %}
                                 <h1 class="text-body-emphasis">Contenu du ticket </h1>
+                            {% elseif ticket.status == 'termine' %}
+                                <h1 class="text-body-emphasis">Cloture du ticket </h1>
                             {% endif %}
                             <p class="col-lg-6 mx-auto mb-4">
                                 {{ ticket.getContent() }}
