--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -89,7 +89,7 @@
 		<!-- Front script -->
 		{% block javascripts %}
 			<script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
-			<script src="{{ asset('js/bootstrap.js') }}"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 			{{ encore_entry_script_tags('app') }}
 			{{ encore_entry_script_tags('imagesloaded') }}
 			{# <script src='https://www.google.com/recaptcha/api.js'></script> #}
