--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -7,7 +7,7 @@
 				<img src="{{ asset('img/logo.png')}}" class="d-sm-none d-md-block d-lg-block" width="10%" height="10%" alt="Agence web à nevers (58)">
 			</a>
 			<a href="{{ url('front_home') }}">
-				<div class="logo-text d-md-none d-sm-block d-lg-block">ScriptZen
+				<div class="logo-text d-md-none d-sm-block d-lg-none">ScriptZen
 					<span>iT</span>
 				</div>
 			</a>
