--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -63,7 +63,7 @@
 							</p>
 
 							<!-- Si vous souhaitez toujours avoir un bouton "Supprimer" visible -->
-							<button type="submit" class="btn btn-primary px-5 mb-5">Supprimer le message</button>
+							<button type="submit" class="btn-primary">Supprimer le message</button>
 
 							{% if ticket.attachment %}
 								<a href="{{ asset('uploads/' ~ ticket.attachment) }}" target="_blank" class="btn btn-info px-5 mb-5">Voir le fichier joint</a>
