edited twig + added download local + mentions legales and CGU

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,11 +74,19 @@
 					</div>
 
 					<div class="footer-copyrights">
-						<p>
-							Walid BELBECHE © 2023
-							<br>
-							Vos données sont chiffrées de bout à bout, aucune exploitation de ces derniers ne sera faite par des tiers.
-						</p>
+						<div class="footer-legales ml-auto">
+							&copy; ScriptZenIT - 2023
+							<ul class="footer-social-links">
+								<li>
+									<a href="{{  url('front_mentions') }}">Mentions légales</a>
+								</li>
+
+								<li>
+									<a href="{{ url('front_conditions') }}">CGU</a>
+								</li>
+								<li><a href="#Données personnelles">Données personnelles</a></li>
+							</ul>
+						</div>
 					</div>
 				</footer>
 				<!-- /Footer -->
