--- a/templates/front/devis/email.html.twig
+++ b/templates/front/devis/email.html.twig
@@ -1,13 +1,13 @@
 {% block body_text %}
 
 	<!--[if gte mso 9]>
-							<xml>
-							  <o:OfficeDocumentSettings>
-							    <o:AllowPNG/>
-							    <o:PixelsPerInch>96</o:PixelsPerInch>
-							  </o:OfficeDocumentSettings>
-							</xml>
-							<![endif]-->
+	<xml>
+	  <o:OfficeDocumentSettings>
+		<o:AllowPNG/>
+		<o:PixelsPerInch>96</o:PixelsPerInch>
+	  </o:OfficeDocumentSettings>
+	</xml>
+	<![endif]-->
 
 	<!--[if IE]><div class="ie-container"><![endif]-->
 	<!--[if mso]><div class="mso-container"><![endif]-->
@@ -116,7 +116,7 @@
 														<td style="overflow-wrap:break-word;word-break:break-word;padding:25px 20px 5px;font-family:'Lato',sans-serif;" align="left">
 
 															<div style="color: #fff200; line-height: 120%; text-align: left; word-wrap: break-word;">
-																<p style="font-size: 14px; line-height: 120%;">RECAPITULATIF DEMANDE
+																<p style="font-size: 14px; line-height: 120%;">Récapitulatif demande de devis
 																</p>
 															</div>
 
@@ -141,10 +141,6 @@
 
 																Votre attente concernant le design :
 																{{ designWebsite }}
-
-																<br>
-
-																Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez me contacter.<a href="mailto:wbelbeche.s@gmail.com">Clickez ici</a>
 																<br>
 															</p>
 														</td>
@@ -239,7 +235,7 @@
 																</div>
 																<div style="font-family: arial, helvetica, sans-serif;">&nbsp;</div>
 																<div style="font-family: arial, helvetica, sans-serif;">
-																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">À bientôt !
+																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez rédiger un ticket.<a href="{{ url('front_assistance')}}">Clickez ici</a>
 																	</span>
 																</div>
 															</div>
