--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1690,6 +1690,7 @@ h3.comment-reply-title:before {
   -webkit-box-shadow: 0 0 12px 0 rgba(0, 0, 0, .12);
   -moz-box-shadow: 0 0 12px 0 rgba(0, 0, 0, .12);
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, .12);
+  margin-bottom: 70px;
 }
 
 .lmpixels-scroll-to-top:hover {
