--- a/templates/front/ticket/email.html.twig
+++ b/templates/front/ticket/email.html.twig
@@ -57,7 +57,7 @@
                                                 <td style="overflow-wrap:break-word;word-break:break-word;padding:20px;font-family:'Lato',sans-serif;" align="left">
 
                                                     <div style="color: #ffffff; line-height: 130%; text-align: center; word-wrap: break-word;">
-                                                        <p style="line-height: 130%;">Demande enregistrée</p>
+                                                        <p style="line-height: 130%;">Ticket crée</p>
                                                     </div>
 
                                                 </td>
@@ -116,7 +116,7 @@
                                                 <td style="overflow-wrap:break-word;word-break:break-word;padding:25px 20px 5px;font-family:'Lato',sans-serif;" align="left">
 
                                                     <div style="color: #fff200; line-height: 120%; text-align: left; word-wrap: break-word;">
-                                                        <p style="font-size: 14px; line-height: 120%;">RECAPITULATIF DEMANDE
+                                                        <p style="font-size: 14px; line-height: 120%;">RECAPITULATIF TICKET
                                                         </p>
                                                     </div>
 
@@ -137,10 +137,6 @@
 
                                                         Le status de votre demande est :
                                                         {{ status }}
-
-                                                        <br>
-
-                                                        Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez me contacter.<a href="mailto:wbelbeche.s@gmail.com">Clickez ici</a>
                                                         <br>
                                                     </p>
                                                 </td>
@@ -231,11 +227,11 @@
 
                                                     <div style="line-height: 120%; text-align: left; word-wrap: break-word;">
                                                         <div style="font-family: arial, helvetica, sans-serif;">
-                                                            <span style="font-size: 12px; color: #999999; line-height: 14.4px;">Vous avez reçu cet e-mail parce que vous venez de faire une demande de devis.</span>
+                                                            <span style="font-size: 12px; color: #999999; line-height: 14.4px;">Vous avez reçu cet e-mail parce que vous venez créer un ticket d'assistance.</span>
                                                         </div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">&nbsp;</div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">
-																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">À bientôt !
+																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez me contacter.<a href="mailto:wbelbeche.s@gmail.com">Clickez ici</a>
 																	</span>
                                                         </div>
                                                     </div>
