edited conditions CGU

--- a/templates/front/administrative/conditions.html.twig
+++ b/templates/front/administrative/conditions.html.twig
@@ -22,7 +22,13 @@
 
         <section>
             <h2>Article 3 : Accès au site</h2>
-            <p>Le site <a href="https://scriptzenit.fr">scriptzenit.fr</a> permet à l'Utilisateur un accès gratuit aux services suivants : [décrire les services]. Le site est accessible gratuitement en tout lieu à tout Utilisateur ayant un accès à Internet. Tous les frais supportés par l'Utilisateur pour accéder au service (matériel informatique, logiciels, connexion Internet, etc.) sont à sa charge.</p>
+            <p>Le site <a href="https://scriptzenit.fr">scriptzenit.fr</a> permet à l'Utilisateur un accès gratuit aux
+                services suivants : La création de compte, d'accéder à son espace personnel, la création de demande de
+                devis, d'avoir une assistance en ligne, la consultation des projets réalisés ou en cours, le
+                téléchargement de devis.
+                Le site est accessible gratuitement en tout lieu à
+                tout Utilisateur ayant un accès à Internet. Tous les frais supportés par l'Utilisateur pour accéder au
+                service (matériel informatique, logiciels, connexion Internet, etc.) sont à sa charge.</p>
         </section>
 
         <section>
