edited conditions CGUx2

--- a/templates/front/administrative/conditions.html.twig
+++ b/templates/front/administrative/conditions.html.twig
@@ -16,8 +16,11 @@
 
         <section>
             <h2>Article 2 : Mentions légales</h2>
-            <p>Le site <a href="https://scriptzenit.fr">scriptzenit.fr</a> est édité par la société [nom de la société], domiciliée à [adresse de la société].</p>
-            <p>[Toutes autres mentions légales concernant par exemple le directeur de publication, l'hébergeur, etc. peuvent être ajoutées ici.]</p>
+            <p>Le site <a href="https://scriptzenit.fr">scriptzenit.fr</a> est édité par la société ScriptZenIT, domiciliée à 2 Les Buissons-cropigny, Chez Mr Stier Pascal.</p>
+            <p>Numéro de téléphone est +33762972691 <br>
+                Adresse e-mail wbelbeche.s@gmail.com.
+            </p>
+            <p>L'hébergeur du site https://scriptzenit.fr est la société PulseHeberg, dont le siège social est situé au 9, Boulevard de Strasbourg 83000 Toulon, accessible via un support en ligne ouvert 24h/24 7j/7.</p>
         </section>
 
         <section>
