edited conditions CGUx3

--- a/templates/front/administrative/conditions.html.twig
+++ b/templates/front/administrative/conditions.html.twig
@@ -118,7 +118,7 @@
                 pas mettre en ligne de contenus pouvant porter atteinte aux intérêts de tierces personnes. Tout recours
                 en justice engagé par un tiers lésé contre le site sera pris en charge par l'Utilisateur.
                 Le contenu de l'Utilisateur peut être à tout moment et pour n'importe quelle raison supprimé ou modifié
-                par le site, sans préavis
+                par le site, sans préavis.
             </p>
         </section>
 
