added axios/ajax competence

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -312,6 +312,12 @@
 				<h4>Json web token</h4>
 			</div>
 		</div>
+		<div class="col-xs-12 col-sm-3">
+			<div class="lm-info-block gray-default">
+				<img src="./img/clients/spec-9.png" alt="Axios / Ajax" class="text-center">
+				<h4>Axios/Ajax</h4>
+			</div>
+		</div>
 	</div>
 	<!-- ./ Outils et technologies -->
 
