update from local

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,7 +68,7 @@
 							</li>
 
 							<li>
-								<a href="{{ url('front_project') }}" target="_blank">Mes réalisations</a>
+								<a href="{{ url('front_project') }}" target="_self">Mes réalisations</a>
 							</li>
 						</ul>
 					</div>
@@ -82,9 +82,9 @@
 								</li>
 
 								<li>
-									<a href="{{ url('front_conditions') }}">CGU</a>
+									<a href="{{ url('front_conditions') }}">Conditions générales</a>
 								</li>
-								<li><a href="#Données personnelles">Données personnelles</a></li>
+								{#<li><a href="#Données personnelles">Données personnelles</a></li>#}
 							</ul>
 						</div>
 					</div>
